# qpp

./: .gitignore  CMakeLists.txt  ClassDiagram.md  Commit_guide.md  README.md  TestOfNumbers.cpp  main.cpp  run.bat  run.sh
Numbers/: Integer.cpp  Integer.h  Number.cpp  Number.h  Rational.cpp  Rational.h
Numbers/ClasesImplementation/: Rational.cpp
Operations_implementation/: calculator.h  main.cpp
Polynomials/: PolyTerm.cpp  PolyTerm.h  Polynomial.cpp  Polynomial.h  SndPoly.cpp  SndPoly.h  SndPolyTerm.cpp  SndPolyTerm.h  ex.cpp  implementation.cpp  implementation_includes.cpp  main.cpp  poly_test.sh  polynomials_implementation.cpp
Testing/: Correctness.cpp  LFSR.cpp  LFSR.h
UniCourse/: calculator.cpp
examples/: implementation_includes.cpp  main.cpp  poly_test.txt
include/: Integer.h  Natural.h  Number.h  Rational.h
include/LinearAlgebra/: Matrix.h  Vector.h
include/Polynomials/: PolyTerm.h  Polynomial.h
src/: Integer.cpp  Natural.cpp  Rational.cpp
src/LinearAlgebra/: Matrix.cpp  Vector.cpp
src/Polynomials/: PolyTerm.cpp  Polynomial.cpp
tests/: CMakeLists.txt
utils/: Comparable.cpp  Comparable.h  Iterable.cpp  Iterable.h  Iterator.cpp  Iterator.h  List.cpp  List.h  OrdenerList.cpp  OrderedList.cpp  OrderedList.h
